[package]
name = "minacalc-python"
version = "0.3.5"
edition = "2021"
description = "Python bindings for minacalc-rs (Etterna rating calculator)"
license = "MIT"
authors = ["Glubus <mael.chevalleraud@gmail.com>"]

[lib]
name = "minacalc_py"
crate-type = ["cdylib"]

[dependencies]
minacalc-rs = { path = "../..", features = [
    "hashmap",
    "rox",
    "thread",
    "utils",
] }
pyo3 = { version = "0.27", features = ["extension-module"] }
