[package]
name = "minacalc-rs"
version = "515.1.0"
edition = "2021"
description = "Safe Rust wrapper for MinaCalc (Etterna difficulty calculator v515)"
license = "MIT"
authors = ["Glubus <mael.chevalleraud@gmail.com>"]
repository = "https://github.com/Glubus/minacalc-rs"
keywords = ["rhythm-game", "difficulty", "etterna", "minacalc"]
categories = ["game-development"]

[[example]]
name = "single_rate"
path = "examples/single_rate.rs"

[[example]]
name = "all_rates"
path = "examples/all_rates.rs"

[[example]]
name = "multithread"
path = "examples/multithread.rs"

[dependencies]
minacalc-sys = { version = "515.1" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "calc"
harness = false
